--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,66 @@ html {
   box-sizing: border-box;
   line-height: 1.5;
   font-family: Open Sans, sans-serif;
+  background-color: #f2f2f2;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+.cards {
+  display: flex;
+  padding: 1.5rem;
+}
+
+.cards div {
+  width: 50%;
+  padding: .75rem;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #333;
+}
+
 img {
   width: 100px;
+}
+
+h1 {
+  text-align: center;
+  text-size: 2rem;
+}
+
+.quest {
+  background-color: #e2e2e2;
+}
+
+.knights {
+  background-color: #ccc;
+}
+
+.dragon {
+  background-color: #aaa;
+}
+
+.ships {
+  background-color: #999;
+}
+
+.cards p {
+  flex-grow: 1;
+}
+
+.btn {
+  display: inline-block;
+  padding: .4em .75em .3em;
+  background-color: #333;
+  border-radius: 8px;
+  border: 3px solid #333;
+  color: #fff;
+  text-decoration: none;
+  font-size: .875rem;
+}
+
+.btn:hover {
+  background-color: #000;
 }
