--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f2f2f2;
 }
 
@@ -15,20 +15,22 @@ html {
 }
 
 .cards div {
-  width: 50%;
+  width: 25%;
   padding: .75rem;
   display: flex;
   flex-direction: column;
-  border: 1px solid #333;
+  border-left: 1px solid #333;
 }
 
 img {
   width: 100px;
+  display: flex;
+  margin: 0 auto;
 }
 
-h1 {
+h2 {
   text-align: center;
-  text-size: 2rem;
+  font-size: 2rem;
 }
 
 .quest {
@@ -59,6 +61,9 @@ h1 {
   border: 3px solid #333;
   color: #fff;
   text-decoration: none;
+}
+
+.btn-small {
   font-size: .875rem;
 }
 
