--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,14 @@ html {
   box-sizing: border-box;
   line-height: 1.5;
   font-family: "Open Sans", sans-serif;
-  background-color: #f2f2f2;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+    background-color: #f2f2f2;
 }
 
 .cards {
