--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,6 @@ body {
   display: flex;
   flex-direction: column;
   border-left: 1px solid #333;
-  font-size: .875rem;
 }
 
 img {
@@ -35,6 +34,7 @@ img {
 .cards img {
   width: 100px;
   margin: 0 auto;
+  padding-bottom: .785rem;
 }
 
 h2 {
@@ -45,6 +45,10 @@ h2 {
 
 h3 {
   margin-bottom: 0;
+}
+
+h3, cite {
+  font-size: .875rem;
 }
 
 .quest {
@@ -75,6 +79,7 @@ h3 {
   border: 3px solid #333;
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .btn-small {
